fix: Move the background border down to the correct alignment

--- a/css/objects.css
+++ b/css/objects.css
@@ -33,7 +33,7 @@
     z-index: 10;
     border-radius: 50%;
     position: absolute;
-    top: -26px;
+    top: 155px;
 }
 
 /* Hair */
